--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.2",
+    "date-fns": "^3.6.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "sass": "^1.75.0",
