--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "daisyui": "^4.10.2",
     "date-fns": "^3.6.0",
     "postcss": "^8.4.38",
