--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
-    "tw-elements-react": "^1.0.0-alpha2"
+    "tw-elements-react": "^1.0.0-alpha2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
+    "@types/react": "18.2.42",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
