--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^1.6.8",
 		"daisyui": "^4.10.2",
 		"date-fns": "^3.6.0",
+		"moment": "^2.30.1",
 		"postcss": "^8.4.38",
 		"react": "^18.3.1",
 		"react-apexcharts": "^1.4.1",
