--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.23.0",
+		"react-type-animation": "^3.2.0",
 		"react-yandex-maps": "^4.6.0",
 		"sass": "^1.75.0",
 		"tailwindcss": "^3.4.3",
